fix: menu on mobile

--- a/src/collective/editablemenu/browser/static/sass/editablemenu.scss
+++ b/src/collective/editablemenu/browser/static/sass/editablemenu.scss
@@ -205,7 +205,6 @@
 
                         .submenuStaticWrapper {
                             display: flex;
-                            flex-direction: column;
                             padding: 0;
 
                             .staticItem {
